// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookBanner outside browser renders 1`] = `
Array [
  <div
    className="book-banner-bar-wrapper variant-big"
    data-analytics-region="book-banner-expanded"
    data-testid="bookbanner"
    style={
      Object {
        "--banner-desktop-big-height": "13rem",
        "--banner-desktop-mini-height": "7rem",
        "--banner-mobile-big-height": "10.4rem",
        "--banner-mobile-mini-height": "6rem",
        "--book-banner-gradient": "linear-gradient(to right, #002468, #004aa2)",
        "--max-nav-width": "128rem",
        "--page-padding-desktop": "3.2rem",
        "--page-padding-mobile": "1.6rem",
        "--z-index-big": 69,
        "--z-index-mini": 68,
      }
    }
  >
    <div
      className="book-banner-top-bar"
      style={
        Object {
          "--max-nav-width": "128rem",
        }
      }
    >
      <a
        className="book-banner-title book-banner-title-link book-banner-text variant-big"
        data-testid="details-link-expanded"
        href="/details/books/book-slug-1"
        onClick={[Function]}
        style={
          Object {
            "--banner-text-max-width": "105.25rem",
            "--book-text-color": "#fff",
            "--book-title-mini-nav-desktop-width": "27rem",
            "--text-regular-line-height": "2.5rem",
          }
        }
      >
        <svg
          aria-hidden="true"
          className="book-banner-left-arrow"
          style={
            Object {
              "--book-text-color": "#fff",
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
            fill="currentColor"
          />
        </svg>
        Test Book 1
      </a>
      <h1
        className="book-banner-chapter book-banner-text variant-big"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
          }
        }
        style={
          Object {
            "--banner-text-max-width": "105.25rem",
            "--book-chapter-mini-max-width": "78.25rem",
            "--book-text-color": "#fff",
            "--h3-mobile-line-height-doubled": "4rem",
          }
        }
      />
    </div>
  </div>,
  <div
    className="book-banner-bar-wrapper variant-mini"
    data-analytics-region="book-banner-collapsed"
    data-testid="bookbanner-collapsed"
    style={
      Object {
        "--banner-desktop-big-height": "13rem",
        "--banner-desktop-mini-height": "7rem",
        "--banner-mobile-big-height": "10.4rem",
        "--banner-mobile-mini-height": "6rem",
        "--book-banner-gradient": "linear-gradient(to right, #002468, #004aa2)",
        "--max-nav-width": "128rem",
        "--page-padding-desktop": "3.2rem",
        "--page-padding-mobile": "1.6rem",
        "--z-index-big": 69,
        "--z-index-mini": 68,
      }
    }
  >
    <div
      className="book-banner-top-bar"
      style={
        Object {
          "--max-nav-width": "128rem",
        }
      }
    >
      <a
        className="book-banner-title book-banner-title-link book-banner-text variant-mini"
        data-testid="details-link-collapsed"
        href="/details/books/book-slug-1"
        onClick={[Function]}
        style={
          Object {
            "--banner-text-max-width": "105.25rem",
            "--book-text-color": "#fff",
            "--book-title-mini-nav-desktop-width": "27rem",
            "--text-regular-line-height": "2.5rem",
          }
        }
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className="book-banner-left-arrow"
          style={
            Object {
              "--book-text-color": "#fff",
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
            fill="currentColor"
          />
        </svg>
        Test Book 1
      </a>
      <span
        className="book-banner-chapter book-banner-text variant-mini"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
          }
        }
        style={
          Object {
            "--banner-text-max-width": "105.25rem",
            "--book-chapter-mini-max-width": "78.25rem",
            "--book-text-color": "#fff",
            "--h3-mobile-line-height-doubled": "4rem",
          }
        }
      />
    </div>
  </div>,
]
`;

exports[`BookBanner without unsaved changes renders correctly when you pass a page and book 1`] = `
Array [
  <div
    className="book-banner-bar-wrapper variant-big"
    data-analytics-region="book-banner-expanded"
    data-testid="bookbanner"
    style={
      Object {
        "--banner-desktop-big-height": "13rem",
        "--banner-desktop-mini-height": "7rem",
        "--banner-mobile-big-height": "10.4rem",
        "--banner-mobile-mini-height": "6rem",
        "--book-banner-gradient": "linear-gradient(to right, #002468, #004aa2)",
        "--max-nav-width": "128rem",
        "--page-padding-desktop": "3.2rem",
        "--page-padding-mobile": "1.6rem",
        "--z-index-big": 69,
        "--z-index-mini": 68,
      }
    }
  >
    <div
      className="book-banner-top-bar"
      style={
        Object {
          "--max-nav-width": "128rem",
        }
      }
    >
      <a
        className="book-banner-title book-banner-title-link book-banner-text variant-big"
        data-testid="details-link-expanded"
        href="/details/books/book-slug-1"
        onClick={[Function]}
        style={
          Object {
            "--banner-text-max-width": "105.25rem",
            "--book-text-color": "#fff",
            "--book-title-mini-nav-desktop-width": "27rem",
            "--text-regular-line-height": "2.5rem",
          }
        }
      >
        <svg
          aria-hidden="true"
          className="book-banner-left-arrow"
          style={
            Object {
              "--book-text-color": "#fff",
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
            fill="currentColor"
          />
        </svg>
        Test Book 1
      </a>
      <h1
        className="book-banner-chapter book-banner-text variant-big"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
          }
        }
        style={
          Object {
            "--banner-text-max-width": "105.25rem",
            "--book-chapter-mini-max-width": "78.25rem",
            "--book-text-color": "#fff",
            "--h3-mobile-line-height-doubled": "4rem",
          }
        }
      />
    </div>
  </div>,
  <div
    className="book-banner-bar-wrapper variant-mini"
    data-analytics-region="book-banner-collapsed"
    data-testid="bookbanner-collapsed"
    style={
      Object {
        "--banner-desktop-big-height": "13rem",
        "--banner-desktop-mini-height": "7rem",
        "--banner-mobile-big-height": "10.4rem",
        "--banner-mobile-mini-height": "6rem",
        "--book-banner-gradient": "linear-gradient(to right, #002468, #004aa2)",
        "--max-nav-width": "128rem",
        "--page-padding-desktop": "3.2rem",
        "--page-padding-mobile": "1.6rem",
        "--z-index-big": 69,
        "--z-index-mini": 68,
      }
    }
  >
    <div
      className="book-banner-top-bar"
      style={
        Object {
          "--max-nav-width": "128rem",
        }
      }
    >
      <a
        className="book-banner-title book-banner-title-link book-banner-text variant-mini"
        data-testid="details-link-collapsed"
        href="/details/books/book-slug-1"
        onClick={[Function]}
        style={
          Object {
            "--banner-text-max-width": "105.25rem",
            "--book-text-color": "#fff",
            "--book-title-mini-nav-desktop-width": "27rem",
            "--text-regular-line-height": "2.5rem",
          }
        }
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className="book-banner-left-arrow"
          style={
            Object {
              "--book-text-color": "#fff",
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
            fill="currentColor"
          />
        </svg>
        Test Book 1
      </a>
      <span
        className="book-banner-chapter book-banner-text variant-mini"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
          }
        }
        style={
          Object {
            "--banner-text-max-width": "105.25rem",
            "--book-chapter-mini-max-width": "78.25rem",
            "--book-text-color": "#fff",
            "--h3-mobile-line-height-doubled": "4rem",
          }
        }
      />
    </div>
  </div>,
]
`;

exports[`BookBanner without unsaved changes renders correctly without osweb data 1`] = `
Array [
  <div
    className="book-banner-bar-wrapper variant-big"
    data-analytics-region="book-banner-expanded"
    data-testid="bookbanner"
    style={
      Object {
        "--banner-desktop-big-height": "13rem",
        "--banner-desktop-mini-height": "7rem",
        "--banner-mobile-big-height": "10.4rem",
        "--banner-mobile-mini-height": "6rem",
        "--book-banner-gradient": "linear-gradient(to right, #002468, #004aa2)",
        "--max-nav-width": "128rem",
        "--page-padding-desktop": "3.2rem",
        "--page-padding-mobile": "1.6rem",
        "--z-index-big": 69,
        "--z-index-mini": 68,
      }
    }
  >
    <div
      className="book-banner-top-bar"
      style={
        Object {
          "--max-nav-width": "128rem",
        }
      }
    >
      <span
        className="book-banner-title book-banner-text variant-big"
        data-testid="book-title-expanded"
        style={
          Object {
            "--banner-text-max-width": "105.25rem",
            "--book-text-color": "#fff",
            "--book-title-mini-nav-desktop-width": "27rem",
            "--text-regular-line-height": "2.5rem",
          }
        }
      >
        Test Book 1
      </span>
      <h1
        className="book-banner-chapter book-banner-text variant-big"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
          }
        }
        style={
          Object {
            "--banner-text-max-width": "105.25rem",
            "--book-chapter-mini-max-width": "78.25rem",
            "--book-text-color": "#fff",
            "--h3-mobile-line-height-doubled": "4rem",
          }
        }
      />
    </div>
  </div>,
  <div
    className="book-banner-bar-wrapper variant-mini"
    data-analytics-region="book-banner-collapsed"
    data-testid="bookbanner-collapsed"
    style={
      Object {
        "--banner-desktop-big-height": "13rem",
        "--banner-desktop-mini-height": "7rem",
        "--banner-mobile-big-height": "10.4rem",
        "--banner-mobile-mini-height": "6rem",
        "--book-banner-gradient": "linear-gradient(to right, #002468, #004aa2)",
        "--max-nav-width": "128rem",
        "--page-padding-desktop": "3.2rem",
        "--page-padding-mobile": "1.6rem",
        "--z-index-big": 69,
        "--z-index-mini": 68,
      }
    }
  >
    <div
      className="book-banner-top-bar"
      style={
        Object {
          "--max-nav-width": "128rem",
        }
      }
    >
      <span
        className="book-banner-title book-banner-text variant-mini"
        data-testid="book-title-collapsed"
        style={
          Object {
            "--banner-text-max-width": "105.25rem",
            "--book-text-color": "#fff",
            "--book-title-mini-nav-desktop-width": "27rem",
            "--text-regular-line-height": "2.5rem",
          }
        }
      >
        Test Book 1
      </span>
      <span
        className="book-banner-chapter book-banner-text variant-mini"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
          }
        }
        style={
          Object {
            "--banner-text-max-width": "105.25rem",
            "--book-chapter-mini-max-width": "78.25rem",
            "--book-text-color": "#fff",
            "--h3-mobile-line-height-doubled": "4rem",
          }
        }
      />
    </div>
  </div>,
]
`;

exports[`BookBanner without unsaved changes renders correctly without pageNode 1`] = `
Array [
  <div
    className="book-banner-bar-wrapper variant-big"
    data-analytics-region="book-banner-expanded"
    data-testid="bookbanner"
    style={
      Object {
        "--banner-desktop-big-height": "13rem",
        "--banner-desktop-mini-height": "7rem",
        "--banner-mobile-big-height": "10.4rem",
        "--banner-mobile-mini-height": "6rem",
        "--book-banner-gradient": "linear-gradient(to right, #002468, #004aa2)",
        "--max-nav-width": "128rem",
        "--page-padding-desktop": "3.2rem",
        "--page-padding-mobile": "1.6rem",
        "--z-index-big": 69,
        "--z-index-mini": 68,
      }
    }
  >
    <div
      className="book-banner-top-bar"
      style={
        Object {
          "--max-nav-width": "128rem",
        }
      }
    >
      <a
        className="book-banner-title book-banner-title-link book-banner-text variant-big"
        data-testid="details-link-expanded"
        href="/details/books/book-slug-1"
        onClick={[Function]}
        style={
          Object {
            "--banner-text-max-width": "105.25rem",
            "--book-text-color": "#fff",
            "--book-title-mini-nav-desktop-width": "27rem",
            "--text-regular-line-height": "2.5rem",
          }
        }
      >
        <svg
          aria-hidden="true"
          className="book-banner-left-arrow"
          style={
            Object {
              "--book-text-color": "#fff",
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
            fill="currentColor"
          />
        </svg>
        Test Book 1
      </a>
    </div>
  </div>,
  <div
    className="book-banner-bar-wrapper variant-mini"
    data-analytics-region="book-banner-collapsed"
    data-testid="bookbanner-collapsed"
    style={
      Object {
        "--banner-desktop-big-height": "13rem",
        "--banner-desktop-mini-height": "7rem",
        "--banner-mobile-big-height": "10.4rem",
        "--banner-mobile-mini-height": "6rem",
        "--book-banner-gradient": "linear-gradient(to right, #002468, #004aa2)",
        "--max-nav-width": "128rem",
        "--page-padding-desktop": "3.2rem",
        "--page-padding-mobile": "1.6rem",
        "--z-index-big": 69,
        "--z-index-mini": 68,
      }
    }
  >
    <div
      className="book-banner-top-bar"
      style={
        Object {
          "--max-nav-width": "128rem",
        }
      }
    >
      <a
        className="book-banner-title book-banner-title-link book-banner-text variant-mini"
        data-testid="details-link-collapsed"
        href="/details/books/book-slug-1"
        onClick={[Function]}
        style={
          Object {
            "--banner-text-max-width": "105.25rem",
            "--book-text-color": "#fff",
            "--book-title-mini-nav-desktop-width": "27rem",
            "--text-regular-line-height": "2.5rem",
          }
        }
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className="book-banner-left-arrow"
          style={
            Object {
              "--book-text-color": "#fff",
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
            fill="currentColor"
          />
        </svg>
        Test Book 1
      </a>
    </div>
  </div>,
]
`;

exports[`BookBanner without unsaved changes renders empty state with no page or book 1`] = `
<div
  className="book-banner-bar-wrapper variant-big"
  style={
    Object {
      "--banner-desktop-big-height": "13rem",
      "--banner-desktop-mini-height": "7rem",
      "--banner-mobile-big-height": "10.4rem",
      "--banner-mobile-mini-height": "6rem",
      "--book-banner-gradient": undefined,
      "--max-nav-width": "128rem",
      "--page-padding-desktop": "3.2rem",
      "--page-padding-mobile": "1.6rem",
      "--z-index-big": 69,
      "--z-index-mini": 68,
    }
  }
/>
`;

exports[`BookBanner without unsaved changes wrapper transition matches snapshot 1`] = `
<div
  className="book-banner-bar-wrapper variant-big up"
  style={
    Object {
      "--banner-desktop-big-height": "13rem",
      "--banner-desktop-mini-height": "7rem",
      "--banner-mobile-big-height": "10.4rem",
      "--banner-mobile-mini-height": "6rem",
      "--book-banner-gradient": "linear-gradient(to right, #002468, #004aa2)",
      "--max-nav-width": "128rem",
      "--page-padding-desktop": "3.2rem",
      "--page-padding-mobile": "1.6rem",
      "--z-index-big": 69,
      "--z-index-mini": 68,
    }
  }
/>
`;
